# wgpu-shadows

./: Cargo.toml  build.rs
fonts/: Tektur-Regular.fnt
graphics/: normal_baker.blend  normal_baker.blend1
src/: camera.rs  diffuse_shader.wgsl  error.rs  layers.rs  lib.rs  ligth_batch.rs  ligth_pipeline.rs  ligth_shader.rs  ligth_shader.wgsl  main.rs  math.rs  mouse.rs  normal_shader.rs  normal_shader.wgsl  objects.rs  quad_batch.rs  quad_shader.rs  scene.rs  scene_manager.rs  shader.rs  shader.wgsl  shaders.rs  shapes.rs  sparse_vec.rs  texture.rs  texture_atlas.rs  uniform.rs  vec_buffer.rs
src/font/: loaded_fonts.rs  mod.rs  parser.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/layers/: ligth.rs  quad.rs
src/objects/: block.rs  block_sq2.rs  text_button.rs  text_input.rs
src/scenes/: lobby.rs  mod.rs
src/scenes/lobby/: mod.rs  ui.rs
src/shaders/: ligth.rs  ligth.wgsl  quad.rs  quad.wgsl  quad_diffuse.wgsl  quad_normal.wgsl
src/wgpu_components/: mod.rs  shader.rs  texture.rs  uniform.rs  vec_buffer.rs
