[package]
name = "graphy"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17.0"
winit = "0.28.6"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
#wgpu = { version = "0.17", features = ["webgl"]}
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[profile.release]
opt-level = "s"
lto = "thin"
# overflow-checks = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "s"
