[package]
name = "graphy"
version = "0.1.0"
edition = "2021"
resolver = "2"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version="1.29.1", features=["rt-multi-thread", "macros"] }
wgpu = "0.17.0"
winit = "0.28.6"

[profile.release]
opt-level = "s"
lto = "thin"
# overflow-checks = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "s"
