[package]
name = "graphy"
version = "0.1.0"
edition = "2021"
resolver = "2"

##########################
### Build Dependencies ###
##########################

[build-dependencies]
indoc = "2"
webp = "0.2"

[build-dependencies.image]
version = "0.24"
features = ["webp"]
default-features = false

[build-dependencies.texture_packer]
version = "0.25"
features = ["webp"]
default-features = false


####################
### Dependencies ###
####################

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.16"
winit = "0.28.6"
smaa = "0.10"

[dependencies.tokio]
version="1.29.1"
features=["rt-multi-thread", "macros"]

[dependencies.bytemuck]
version = "1.13"
features = ["derive"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["webp"]

################
### Profiles ###
################

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
incremental = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = "s"

